integration-tests/tests/integration/snapshots/integration__banned_default_in_default_filter.snap
---
source: integration-tests/tests/integration/main.rs
expression: output.stderr_as_str()
---
  error: predicate not allowed in `default-filter` expressions
   ╭────
 1 │ default()
   · ────┬────
   ·     ╰── default() causes infinite recursion
   ╰────

error: failed to parse filterset
